Added junit dependency